@@ -13,6 +13,7 @@ Minor changes:
 * Updated bundled Test::Unit::Lite to 0.05.
 * Replaced some textevals with closures or pure references.
 * Does not use Scalar::Util::blessed() and Carp::croak().
+* Updated benchmark results in documentation.
 
 ------------------------------------------------------------------------
 0.07 | Piotr Roszatycki <dexter@debian.org> | 2007-05-18
